12-kubernetes-05-cni/src/Deployment_network-multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: network-multitool
  name: network-multitool
  namespace: app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-multitool
  template:
    metadata:
      labels:
        app: network-multitool
    spec:
      containers:
      - image: praqma/network-multitool:latest
        name: network-multitool
