12-kubernetes-05-cni/src/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netology-network-policy
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: network-multitool
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.233.0.0/16
  egress:
    - to:
        - ipBlock:
            cidr: 10.233.0.0/16
